# network-first-aid

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  design-qa.md  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: release-v0.1.0.md  release-v0.1.1.md
scripts/: package-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: connectivity.ps1  diagnostics.ps1  repair.ps1  restore.ps1  update.ps1
src-tauri/src/: audit.rs  diagnostics.rs  lib.rs  main.rs  models.rs  powershell.rs  repairs.rs  snapshots.rs  updates.rs
src/main/: audit.ts  diagnostics.ts  index.ts  ipc.ts  powershell.ts  repair-scripts.ts  repairs.ts  snapshots.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  api.ts  styles.css  vite-env.d.ts
src/shared/: action-catalog.ts  contracts.ts  diagnostics-analysis.ts  update-policy.ts  version.ts
tests/: diagnostics.test.ts  safety.test.ts  snapshots.test.ts  updates.test.ts
